feat: start on weather pages

--- a/Hello-Framework/package.json
+++ b/Hello-Framework/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "@observablehq/framework": "^1.7.0",
     "d3-dsv": "^3.0.1",
-    "d3-time-format": "^4.1.0"
+    "d3-time-format": "^4.1.0",
+    "esrun": "^3.2.26",
+    "openmeteo": "^1.1.3"
   },
   "devDependencies": {
     "rimraf": "^5.0.5"
